--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/package.json
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/package.json
@@ -25,6 +25,7 @@
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
