--- a/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/package.json
+++ b/DesarrolloeImplementacionDeAplicacionesWeb/proyectoWeb/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^19.0.5",
     "@angular/router": "^19.0.5",
     "@bluehalo/ngx-leaflet": "^19.0.0",
+    "angular-cli-ghpages": "^2.0.3",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
@@ -35,6 +36,7 @@
     "@angular/compiler-cli": "^19.0.5",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.16",
+    "gh-pages": "^6.3.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
